--- a/MySQL/dockerfile
+++ b/MySQL/dockerfile
@@ -1,12 +1,14 @@
-FROM mysql:5.7.22
+FROM mysql:5.7.22                                                                                                                                             
 
 MAINTAINER FLLab
+
+ENV MYSQL_ROOT_PASSWORD=123456 MYSQL_DATABASE=my_db MYSQL_USER=Jim MYSQL_PASSWORD=123456 MYSQL_TABLE=userinfo
 
 EXPOSE 3306
 
 RUN echo " \
      use mysql; \
-     grant all privileges on \`${MYSQL_DATABASE}\`.* to 'Jim'@'%' identified by '123456'; \
+     grant all privileges on \`${MYSQL_DATABASE}\`.* to '${MYSQL_USER}'@'%' identified by '${MYSQL_PASSWORD}'; \
      flush privileges; \
      use ${MYSQL_DATABASE}; \
      CREATE TABLE IF NOT EXISTS \`${MYSQL_TABLE}\`( \
@@ -20,4 +22,5 @@ RUN echo " \
        \`Flag\` boolean  NOT NULL,\
        PRIMARY KEY ( \`id\` )\
      )ENGINE=InnoDB DEFAULT CHARSET=utf8;\
-   update userinfo set Flag = True where ReceiveId = 'b' and Flag = false;" > /docker-entrypoint-initdb.d/init.sql 
+   update userinfo set Flag = True where ReceiveId = 'b' and Flag = false;" > /docker-entrypoint-initdb.d/init.sql
+
