--- a/docker_node/Dockerfile
+++ b/docker_node/Dockerfile
@@ -8,9 +8,13 @@ COPY . /FLLab
 
 WORKDIR /FLLab/org
 
-Run npm i npm@latest -g
+#Run npm i npm@latest -g
 
-RUN npm install
+#RUN npm install
+
+RUN npm install -g cnpm --registry=https://registry.npm.taobao.org
+
+RUN cnpm install
 
 EXPOSE 4000
 
