--- a/config.json
+++ b/config.json
@@ -21,8 +21,8 @@
       "name": "peerOrg2",
       "mspid": "Org2MSP",
       "peer1": {
-        "requests": "grpcs://192.168.1.205:9051",
-        "events": "grpcs://192.168.1.205:9053",
+        "requests": "grpcs://192.168.1.205:8051",
+        "events": "grpcs://192.168.1.205:8053",
         "server-hostname": "peer0.org2.example.com",
         "tls_cacerts":
           "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org2.example.com/peers/peer0.org2.example.com/tls/ca.crt"
@@ -32,6 +32,23 @@
           "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp/keystore",
         "cert":
           "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp/signcerts"
+      }
+    },
+   "org3": { 
+      "name": "peerOrg3",
+      "mspid": "Org3MSP",
+      "peer1": {
+        "requests": "grpcs://192.168.1.205:9051",
+        "events": "grpcs://192.168.1.205:9053",
+        "server-hostname": "peer0.org3.example.com",
+        "tls_cacerts":
+          "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls/ca.crt"
+      },
+      "admin": {
+        "key":
+          "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp/keystore",
+        "cert":
+          "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp/signcerts"
       }
     }
   },
@@ -47,20 +64,20 @@
     {
       "mspid": "OrdererMSP",
       "server-hostname": "orderer1.example.com",
-      "requests": "grpcs://192.168.1.205:7050",
+      "requests": "grpcs://192.168.1.205:8050",
       "tls_cacerts":
         "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/ordererOrganizations/example.com/orderers/orderer1.example.com/tls/ca.crt"
     },
     {
       "mspid": "OrdererMSP",
       "server-hostname": "orderer2.example.com",
-      "requests": "grpcs://192.168.1.205:7050",
+      "requests": "grpcs://192.168.1.205:9050",
       "tls_cacerts":
         "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/crypto-config/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/ca.crt"
     }
   ],
   "keyValueStore": "/tmp/fabric-client-kvs",
-  "configtxgenToolPath": "/home/ubuntu/go/src/github.com/hyperledger/fabric-samples/bin",
+  "configtxgenToolPath": "/home/ubuntu/go/src/github.com/FLLab/SHEP/fabric_network/bin",
   "SYNC_START_DATE_FORMAT": "YYYY/MM/DD",
   "syncStartDate": "2018/01/01",
   "eventWaitTime": "30000",
